Make .gitignore more testable

--- a/.gitignore
+++ b/.gitignore
@@ -116,3 +116,4 @@ logs/
 # 2025-03-13T13:41:51 – nssLJwilpiVjf61R81gA
 # 2025-03-26T02:04:51 – hdC3MwemqaEOQUD2ptwy
 # 2012-07-15T21:31:41 – nrA3eMVCIfpYJRoOfsVF
+# 2012-08-10T19:26:34 – p1hJp44iGLQLkBvbnTvu
