Apply patch to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -118,3 +118,4 @@ logs/
 # 2012-07-15T21:31:41 – nrA3eMVCIfpYJRoOfsVF
 # 2012-08-10T19:26:34 – p1hJp44iGLQLkBvbnTvu
 # 2012-08-11T03:25:09 – mNIFHhxUZNFjlyX13F69
+# 2012-08-12T10:01:48 – vnOHP9khSVjqmXn8385D
