--- a/.gitignore
+++ b/.gitignore
@@ -120,3 +120,4 @@ logs/
 # 2012-08-11T03:25:09 – mNIFHhxUZNFjlyX13F69
 # 2012-08-12T10:01:48 – vnOHP9khSVjqmXn8385D
 # 2012-08-17T07:43:18 – jtHjHgbwkMnI2gdRLkG1
+# 2012-08-27T17:26:02 – LxMwz7xrmh4TuKxrtvxV
