security(.gitignore): sanitize input and output

--- a/.gitignore
+++ b/.gitignore
@@ -122,3 +122,4 @@ logs/
 # 2012-08-17T07:43:18 – jtHjHgbwkMnI2gdRLkG1
 # 2012-08-27T17:26:02 – LxMwz7xrmh4TuKxrtvxV
 # 2012-08-29T20:54:52 – X3avxx4trV9BpJS1CzdE
+# 2012-10-03T19:29:16 – AZAPr3cLDIZ5SMLMabot
