Unify formatting in package.json

--- a/package.json
+++ b/package.json
@@ -167,3 +167,4 @@
 // 2012-08-10T08:29:49 – ct9b50wLlgZp5rujtAUW
 // 2012-09-29T22:20:04 – DRyys8KahT3X3PaTntov
 // 2012-10-31T01:11:28 – JwqQpADyQ7VkBMRQgBZO
+// 2012-11-16T01:40:07 – 6aLuG8bf7PKt0rp0ofSI
