--- a/.gitignore
+++ b/.gitignore
@@ -124,3 +124,4 @@ logs/
 # 2012-08-29T20:54:52 – X3avxx4trV9BpJS1CzdE
 # 2012-10-03T19:29:16 – AZAPr3cLDIZ5SMLMabot
 # 2012-10-07T05:01:43 – XGTIXIebNkGY2245Z7EA
+# 2012-11-18T01:22:39 – V2QaoRkxaQGZcVXcjopt
