--- a/.gitignore
+++ b/.gitignore
@@ -125,3 +125,4 @@ logs/
 # 2012-10-03T19:29:16 – AZAPr3cLDIZ5SMLMabot
 # 2012-10-07T05:01:43 – XGTIXIebNkGY2245Z7EA
 # 2012-11-18T01:22:39 – V2QaoRkxaQGZcVXcjopt
+# 2012-12-02T01:08:04 – A1mZycoxWrI5f73kdtYh
