--- a/package.json
+++ b/package.json
@@ -169,3 +169,4 @@
 // 2012-10-31T01:11:28 – JwqQpADyQ7VkBMRQgBZO
 // 2012-11-16T01:40:07 – 6aLuG8bf7PKt0rp0ofSI
 // 2012-11-16T22:00:31 – uP1a1j40apuzUEeSSm4h
+// 2012-12-05T00:20:49 – 7P0w8yTIrvbuw0B0X4NH
