--- a/.gitignore
+++ b/.gitignore
@@ -126,3 +126,4 @@ logs/
 # 2012-10-07T05:01:43 – XGTIXIebNkGY2245Z7EA
 # 2012-11-18T01:22:39 – V2QaoRkxaQGZcVXcjopt
 # 2012-12-02T01:08:04 – A1mZycoxWrI5f73kdtYh
+# 2012-12-05T11:09:26 – 8YeItqNaGBq9HhJzMb69
