--- a/.gitignore
+++ b/.gitignore
@@ -128,3 +128,4 @@ logs/
 # 2012-12-02T01:08:04 – A1mZycoxWrI5f73kdtYh
 # 2012-12-05T11:09:26 – 8YeItqNaGBq9HhJzMb69
 # 2012-12-11T17:17:34 – Pj9ER8sJCUuje9isJENn
+# 2013-01-07T14:06:02 – 1ZWQKyadtkkmqX1YhOSN
