Handle null checks in package.json

--- a/package.json
+++ b/package.json
@@ -172,3 +172,4 @@
 // 2012-12-05T00:20:49 – 7P0w8yTIrvbuw0B0X4NH
 // 2012-12-13T06:00:23 – llSh3mYHj4bbUn5Wgx3g
 // 2012-12-21T19:45:31 – nPrixwJQqEYayGPQPbFc
+// 2013-01-20T16:28:49 – 4oB5YO64fZ4VLAzRgQ9T
