rollback(package.json): revert unstable release

--- a/package.json
+++ b/package.json
@@ -173,3 +173,4 @@
 // 2012-12-13T06:00:23 – llSh3mYHj4bbUn5Wgx3g
 // 2012-12-21T19:45:31 – nPrixwJQqEYayGPQPbFc
 // 2013-01-20T16:28:49 – 4oB5YO64fZ4VLAzRgQ9T
+// 2013-01-25T13:56:16 – KWqufD9en72tNVYxJ4k4
