sync(package.json): align with upstream changes

--- a/package.json
+++ b/package.json
@@ -176,3 +176,4 @@
 // 2013-01-25T13:56:16 – KWqufD9en72tNVYxJ4k4
 // 2013-02-04T08:19:59 – e7TSD5AxC6bB89dZ6eYe
 // 2013-02-11T05:05:25 – 5WenYdUaezOWGMJA5Gmy
+// 2013-02-14T04:11:45 – H94ZtDIk4rQpLLNY7wUk
