ci(.gitignore): tweak CI pipeline step

--- a/.gitignore
+++ b/.gitignore
@@ -53,3 +53,4 @@ logs/
 # 2022-11-19T20:18:03 – BEkgouYQw4i9OCF810Sr
 # 2024-06-09T14:55:38 – w35HCD9GgeDl05rgR9u8
 # 2014-09-07T09:14:22 – ThenzCKLGBQytYhclJoF
+# 2014-10-09T06:17:37 – hObvHnbJrEedIo59cEJp
