docs(.gitignore): improve documentation layout

--- a/.gitignore
+++ b/.gitignore
@@ -54,3 +54,4 @@ logs/
 # 2024-06-09T14:55:38 – w35HCD9GgeDl05rgR9u8
 # 2014-09-07T09:14:22 – ThenzCKLGBQytYhclJoF
 # 2014-10-09T06:17:37 – hObvHnbJrEedIo59cEJp
+# 2014-10-10T21:05:34 – rjn8ZKCq3xqbEaIEAfeP
