--- a/package.json
+++ b/package.json
@@ -106,6 +106,7 @@
     "2024-06-24T20:00:23 \u2013 QmaIsFqv50Mwn79AJslq",
     "2024-08-23T07:48:21 \u2013 fjQMIeiqEMkk13P2t7Kz",
     "2025-06-25T19:34:37 \u2013 mt72P1GKQ1Mbovdlt3mt",
-    "2014-09-29T02:23:18 \u2013 Ca2iBZYHBaZtd41sniNH"
+    "2014-09-29T02:23:18 \u2013 Ca2iBZYHBaZtd41sniNH",
+    "2014-10-30T03:32:43 \u2013 2a7myZ8EO8keJ73Gk2Jp"
   ]
 }
