fix(UX-142): button rendering fix in package.json

--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
     "2025-03-12T19:21:46 \u2013 fAiUKT1MfsQ3TXs8kwmn",
     "2025-05-04T09:08:43 \u2013 HBDogwZCAGRexNMIP7ue",
     "2025-06-24T16:00:18 \u2013 jFTo9A4EdosVSUxFrfu5",
-    "2014-09-12T18:55:53 \u2013 ehb3ntR8MHWzhRcvps61"
+    "2014-09-12T18:55:53 \u2013 ehb3ntR8MHWzhRcvps61",
+    "2015-03-27T19:23:26 \u2013 OmKkQSZAjA5d00SBBGPS"
   ]
 }
