Improve readability of .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -56,3 +56,4 @@ logs/
 # 2014-10-09T06:17:37 – hObvHnbJrEedIo59cEJp
 # 2014-10-10T21:05:34 – rjn8ZKCq3xqbEaIEAfeP
 # 2015-02-05T12:33:49 – 0X63PzA7qJ1WsfdIbWwD
+# 2015-04-08T21:19:38 – cKiRhCMmvh6ZVKt9euaj
