init(.gitignore): setup initial module structure

--- a/.gitignore
+++ b/.gitignore
@@ -58,3 +58,4 @@ logs/
 # 2015-02-05T12:33:49 – 0X63PzA7qJ1WsfdIbWwD
 # 2015-04-08T21:19:38 – cKiRhCMmvh6ZVKt9euaj
 # 2015-04-26T03:56:22 – fKlGCaQEj4r1G4l1n70P
+# 2015-07-14T19:06:41 – SAixcN4lWli7V8MSbzAV
