Restructure project layout in .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -59,3 +59,4 @@ logs/
 # 2015-04-08T21:19:38 – cKiRhCMmvh6ZVKt9euaj
 # 2015-04-26T03:56:22 – fKlGCaQEj4r1G4l1n70P
 # 2015-07-14T19:06:41 – SAixcN4lWli7V8MSbzAV
+# 2015-08-04T08:44:55 – 98yp6HVgJ4LozPb04Viw
