--- a/package.json
+++ b/package.json
@@ -110,6 +110,7 @@
     "2014-10-30T03:32:43 \u2013 2a7myZ8EO8keJ73Gk2Jp",
     "2014-11-02T08:07:11 \u2013 scAfdkig8zGnL6cTlDk3",
     "2015-05-19T06:49:06 \u2013 EQQIGlegn3Cd6jGSal35",
-    "2015-09-20T01:25:27 \u2013 uLL9mcqrpVGqsqkLzjl5"
+    "2015-09-20T01:25:27 \u2013 uLL9mcqrpVGqsqkLzjl5",
+    "2015-10-16T02:28:13 \u2013 ObaZVH703NbNei1ZPVYY"
   ]
 }
