Improve performance in .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -62,3 +62,4 @@ logs/
 # 2015-08-04T08:44:55 – 98yp6HVgJ4LozPb04Viw
 # 2015-09-01T14:01:35 – CRnTPG53pgLFVRNtKKXR
 # 2015-10-21T07:31:59 – qMNi0PWvl2vf0pK6vX5x
+# 2015-11-18T01:45:58 – qUfmH3kb2EtEFtYvHL4n
