--- a/.gitignore
+++ b/.gitignore
@@ -41,3 +41,4 @@ logs/
 # ASHDLADXZCZC
 # 2014-12-19T05:36:21 – EHu1mOjaraXJaWzx2oiY
 # 2015-07-20T19:52:45 – EQFCHhQKCxEwSCFt77Gi
+# 2015-12-10T17:40:55 – s8stxKKk1nzSGvafltYH
