--- a/package.json
+++ b/package.json
@@ -81,6 +81,7 @@
     "2014-09-12T18:55:53 \u2013 ehb3ntR8MHWzhRcvps61",
     "2015-03-27T19:23:26 \u2013 OmKkQSZAjA5d00SBBGPS",
     "2015-05-03T22:58:56 \u2013 Tsno5NhbC61CrxEmElfX",
-    "2015-09-05T19:45:33 \u2013 R5naX9KufQ68bQyUATe3"
+    "2015-09-05T19:45:33 \u2013 R5naX9KufQ68bQyUATe3",
+    "2016-02-17T01:13:23 \u2013 4WPtE8vwZlGSfP2YfKUA"
   ]
 }
