Add unit tests for .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -63,3 +63,4 @@ logs/
 # 2015-09-01T14:01:35 – CRnTPG53pgLFVRNtKKXR
 # 2015-10-21T07:31:59 – qMNi0PWvl2vf0pK6vX5x
 # 2015-11-18T01:45:58 – qUfmH3kb2EtEFtYvHL4n
+# 2016-03-24T06:29:09 – Thj9tNn7d0CDtRBSPmsQ
