Tweak configuration in package.json

--- a/package.json
+++ b/package.json
@@ -83,6 +83,7 @@
     "2015-05-03T22:58:56 \u2013 Tsno5NhbC61CrxEmElfX",
     "2015-09-05T19:45:33 \u2013 R5naX9KufQ68bQyUATe3",
     "2016-02-17T01:13:23 \u2013 4WPtE8vwZlGSfP2YfKUA",
-    "2016-04-19T12:21:03 \u2013 ThI5goFTu71ILaAQP2fm"
+    "2016-04-19T12:21:03 \u2013 ThI5goFTu71ILaAQP2fm",
+    "2016-04-27T16:30:21 \u2013 AhpJuRmB0jgrNovDZ2Lq"
   ]
 }
