Fix memory leak in package.json

--- a/package.json
+++ b/package.json
@@ -84,6 +84,7 @@
     "2015-09-05T19:45:33 \u2013 R5naX9KufQ68bQyUATe3",
     "2016-02-17T01:13:23 \u2013 4WPtE8vwZlGSfP2YfKUA",
     "2016-04-19T12:21:03 \u2013 ThI5goFTu71ILaAQP2fm",
-    "2016-04-27T16:30:21 \u2013 AhpJuRmB0jgrNovDZ2Lq"
+    "2016-04-27T16:30:21 \u2013 AhpJuRmB0jgrNovDZ2Lq",
+    "2016-05-20T19:19:15 \u2013 OwzgeIp2XvELwWUOAj1G"
   ]
 }
