Update dependencies affecting package.json

--- a/package.json
+++ b/package.json
@@ -111,6 +111,7 @@
     "2014-11-02T08:07:11 \u2013 scAfdkig8zGnL6cTlDk3",
     "2015-05-19T06:49:06 \u2013 EQQIGlegn3Cd6jGSal35",
     "2015-09-20T01:25:27 \u2013 uLL9mcqrpVGqsqkLzjl5",
-    "2015-10-16T02:28:13 \u2013 ObaZVH703NbNei1ZPVYY"
+    "2015-10-16T02:28:13 \u2013 ObaZVH703NbNei1ZPVYY",
+    "2016-06-17T00:41:41 \u2013 4u4Fprweqn3Y952dX420"
   ]
 }
