--- a/package.json
+++ b/package.json
@@ -85,6 +85,7 @@
     "2016-02-17T01:13:23 \u2013 4WPtE8vwZlGSfP2YfKUA",
     "2016-04-19T12:21:03 \u2013 ThI5goFTu71ILaAQP2fm",
     "2016-04-27T16:30:21 \u2013 AhpJuRmB0jgrNovDZ2Lq",
-    "2016-05-20T19:19:15 \u2013 OwzgeIp2XvELwWUOAj1G"
+    "2016-05-20T19:19:15 \u2013 OwzgeIp2XvELwWUOAj1G",
+    "2016-06-21T17:07:57 \u2013 akIxK5K7vKaIskG1RMh8"
   ]
 }
