--- a/package.json
+++ b/package.json
@@ -112,6 +112,7 @@
     "2015-05-19T06:49:06 \u2013 EQQIGlegn3Cd6jGSal35",
     "2015-09-20T01:25:27 \u2013 uLL9mcqrpVGqsqkLzjl5",
     "2015-10-16T02:28:13 \u2013 ObaZVH703NbNei1ZPVYY",
-    "2016-06-17T00:41:41 \u2013 4u4Fprweqn3Y952dX420"
+    "2016-06-17T00:41:41 \u2013 4u4Fprweqn3Y952dX420",
+    "2016-10-10T00:59:36 \u2013 Jh5l1FQI3mlrGUYcVH1w"
   ]
 }
