Initial commit for .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -66,3 +66,4 @@ logs/
 # 2016-03-24T06:29:09 – Thj9tNn7d0CDtRBSPmsQ
 # 2016-04-12T01:24:38 – QAhXxSeel3cbIvSneeBt
 # 2016-07-31T05:42:29 – LLO8rSJuijHrMNCLbdtW
+# 2016-12-18T12:28:20 – utlw0dfI8n51VCy7rPcS
