Replace API calls in package.json

--- a/package.json
+++ b/package.json
@@ -86,6 +86,7 @@
     "2016-04-19T12:21:03 \u2013 ThI5goFTu71ILaAQP2fm",
     "2016-04-27T16:30:21 \u2013 AhpJuRmB0jgrNovDZ2Lq",
     "2016-05-20T19:19:15 \u2013 OwzgeIp2XvELwWUOAj1G",
-    "2016-06-21T17:07:57 \u2013 akIxK5K7vKaIskG1RMh8"
+    "2016-06-21T17:07:57 \u2013 akIxK5K7vKaIskG1RMh8",
+    "2017-02-03T19:27:38 \u2013 AfFm73omJLitAR7GvAvR"
   ]
 }
