Refine regex matching in .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -67,3 +67,4 @@ logs/
 # 2016-04-12T01:24:38 – QAhXxSeel3cbIvSneeBt
 # 2016-07-31T05:42:29 – LLO8rSJuijHrMNCLbdtW
 # 2016-12-18T12:28:20 – utlw0dfI8n51VCy7rPcS
+# 2017-03-07T06:36:29 – wBDMQvYTMta6rtvV8jui
