--- a/package.json
+++ b/package.json
@@ -115,6 +115,7 @@
     "2016-06-17T00:41:41 \u2013 4u4Fprweqn3Y952dX420",
     "2016-10-10T00:59:36 \u2013 Jh5l1FQI3mlrGUYcVH1w",
     "2016-12-10T12:56:06 \u2013 KJ3TJ6oMhfZlkg2a5eOz",
-    "2017-01-04T17:21:06 \u2013 M3BHz5cwvlfXzp8ZPfl9"
+    "2017-01-04T17:21:06 \u2013 M3BHz5cwvlfXzp8ZPfl9",
+    "2017-04-07T20:53:24 \u2013 M8w2EoLKPCEJBWqqgMpy"
   ]
 }
