localize(.gitignore): add i18n support

--- a/.gitignore
+++ b/.gitignore
@@ -68,3 +68,4 @@ logs/
 # 2016-07-31T05:42:29 – LLO8rSJuijHrMNCLbdtW
 # 2016-12-18T12:28:20 – utlw0dfI8n51VCy7rPcS
 # 2017-03-07T06:36:29 – wBDMQvYTMta6rtvV8jui
+# 2017-04-11T08:05:01 – K0ziqbeEoDkyG3oe1qKS
