Improve performance in .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -70,3 +70,4 @@ logs/
 # 2017-03-07T06:36:29 – wBDMQvYTMta6rtvV8jui
 # 2017-04-11T08:05:01 – K0ziqbeEoDkyG3oe1qKS
 # 2017-05-06T13:45:08 – 55lrvJtfOdBHQgbPugWc
+# 2017-06-07T08:39:02 – Ztg5APYNQRbpDqtFEBnE
