patch(.gitignore): fix crash in edge case scenario

--- a/.gitignore
+++ b/.gitignore
@@ -72,3 +72,4 @@ logs/
 # 2017-05-06T13:45:08 – 55lrvJtfOdBHQgbPugWc
 # 2017-06-07T08:39:02 – Ztg5APYNQRbpDqtFEBnE
 # 2017-07-11T06:41:08 – 11kzQ9sSnS2eXjPxckKC
+# 2017-09-01T14:38:09 – tVOdk8asXhrKV16duyq9
