Port logic to new framework in .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -43,3 +43,4 @@ logs/
 # 2015-07-20T19:52:45 – EQFCHhQKCxEwSCFt77Gi
 # 2015-12-10T17:40:55 – s8stxKKk1nzSGvafltYH
 # 2017-01-22T07:06:50 – kx80GouhBRl0igFBhcAx
+# 2017-10-24T11:36:30 – RRZDPoN0Wg4nGFi7yEVu
