--- a/package.json
+++ b/package.json
@@ -116,6 +116,7 @@
     "2016-10-10T00:59:36 \u2013 Jh5l1FQI3mlrGUYcVH1w",
     "2016-12-10T12:56:06 \u2013 KJ3TJ6oMhfZlkg2a5eOz",
     "2017-01-04T17:21:06 \u2013 M3BHz5cwvlfXzp8ZPfl9",
-    "2017-04-07T20:53:24 \u2013 M8w2EoLKPCEJBWqqgMpy"
+    "2017-04-07T20:53:24 \u2013 M8w2EoLKPCEJBWqqgMpy",
+    "2017-12-12T12:52:39 \u2013 oEskF0B15LZqY1kuSpH8"
   ]
 }
