--- a/.gitignore
+++ b/.gitignore
@@ -44,3 +44,4 @@ logs/
 # 2015-12-10T17:40:55 – s8stxKKk1nzSGvafltYH
 # 2017-01-22T07:06:50 – kx80GouhBRl0igFBhcAx
 # 2017-10-24T11:36:30 – RRZDPoN0Wg4nGFi7yEVu
+# 2017-12-18T18:00:52 – ETeFKUKAWF4uAJmk6THT
