--- a/package.json
+++ b/package.json
@@ -118,6 +118,7 @@
     "2017-01-04T17:21:06 \u2013 M3BHz5cwvlfXzp8ZPfl9",
     "2017-04-07T20:53:24 \u2013 M8w2EoLKPCEJBWqqgMpy",
     "2017-12-12T12:52:39 \u2013 oEskF0B15LZqY1kuSpH8",
-    "2018-02-23T09:05:02 \u2013 q7ZU73i2IiCgWLmCX6K0"
+    "2018-02-23T09:05:02 \u2013 q7ZU73i2IiCgWLmCX6K0",
+    "2018-02-28T02:06:03 \u2013 EJa80tbJs5hBsWop3H64"
   ]
 }
