--- a/package.json
+++ b/package.json
@@ -120,6 +120,7 @@
     "2017-12-12T12:52:39 \u2013 oEskF0B15LZqY1kuSpH8",
     "2018-02-23T09:05:02 \u2013 q7ZU73i2IiCgWLmCX6K0",
     "2018-02-28T02:06:03 \u2013 EJa80tbJs5hBsWop3H64",
-    "2018-03-01T05:08:11 \u2013 1k3oaWvxbSQEPHDzT42W"
+    "2018-03-01T05:08:11 \u2013 1k3oaWvxbSQEPHDzT42W",
+    "2018-03-24T14:17:51 \u2013 6YgXwveq9a4gme7rQSBV"
   ]
 }
