Fix edge case in package.json

--- a/package.json
+++ b/package.json
@@ -121,6 +121,7 @@
     "2018-02-23T09:05:02 \u2013 q7ZU73i2IiCgWLmCX6K0",
     "2018-02-28T02:06:03 \u2013 EJa80tbJs5hBsWop3H64",
     "2018-03-01T05:08:11 \u2013 1k3oaWvxbSQEPHDzT42W",
-    "2018-03-24T14:17:51 \u2013 6YgXwveq9a4gme7rQSBV"
+    "2018-03-24T14:17:51 \u2013 6YgXwveq9a4gme7rQSBV",
+    "2018-04-28T06:44:13 \u2013 Xyf8a8M3TxdXF9P3pIjj"
   ]
 }
