--- a/.gitignore
+++ b/.gitignore
@@ -45,3 +45,4 @@ logs/
 # 2017-01-22T07:06:50 – kx80GouhBRl0igFBhcAx
 # 2017-10-24T11:36:30 – RRZDPoN0Wg4nGFi7yEVu
 # 2017-12-18T18:00:52 – ETeFKUKAWF4uAJmk6THT
+# 2018-05-20T06:45:24 – CzsW4kRoHtyYBPhnfbiY
