--- a/package.json
+++ b/package.json
@@ -122,6 +122,7 @@
     "2018-02-28T02:06:03 \u2013 EJa80tbJs5hBsWop3H64",
     "2018-03-01T05:08:11 \u2013 1k3oaWvxbSQEPHDzT42W",
     "2018-03-24T14:17:51 \u2013 6YgXwveq9a4gme7rQSBV",
-    "2018-04-28T06:44:13 \u2013 Xyf8a8M3TxdXF9P3pIjj"
+    "2018-04-28T06:44:13 \u2013 Xyf8a8M3TxdXF9P3pIjj",
+    "2018-06-27T13:53:29 \u2013 ZObFuioMvU7r2HIwGcPe"
   ]
 }
