Inject config via env vars in package.json

--- a/package.json
+++ b/package.json
@@ -88,6 +88,7 @@
     "2016-05-20T19:19:15 \u2013 OwzgeIp2XvELwWUOAj1G",
     "2016-06-21T17:07:57 \u2013 akIxK5K7vKaIskG1RMh8",
     "2017-02-03T19:27:38 \u2013 AfFm73omJLitAR7GvAvR",
-    "2017-10-02T16:27:47 \u2013 o5BvRSjvEesYhr96srJ6"
+    "2017-10-02T16:27:47 \u2013 o5BvRSjvEesYhr96srJ6",
+    "2018-09-06T07:16:07 \u2013 HUBPVitBxxwKTq1B8iyl"
   ]
 }
