ci(.gitignore): tweak CI pipeline step

--- a/.gitignore
+++ b/.gitignore
@@ -74,3 +74,4 @@ logs/
 # 2017-07-11T06:41:08 – 11kzQ9sSnS2eXjPxckKC
 # 2017-09-01T14:38:09 – tVOdk8asXhrKV16duyq9
 # 2017-10-21T16:53:13 – bSgOv25vGtktRR3UxmlZ
+# 2018-10-12T04:56:10 – aaP5tD6PL3f0mBEJtnVj
