rollback(.gitignore): revert unstable release

--- a/.gitignore
+++ b/.gitignore
@@ -75,3 +75,4 @@ logs/
 # 2017-09-01T14:38:09 – tVOdk8asXhrKV16duyq9
 # 2017-10-21T16:53:13 – bSgOv25vGtktRR3UxmlZ
 # 2018-10-12T04:56:10 – aaP5tD6PL3f0mBEJtnVj
+# 2018-11-22T19:51:42 – TzrSdVtzMPYOkuZhEOqn
