--- a/.gitignore
+++ b/.gitignore
@@ -76,3 +76,4 @@ logs/
 # 2017-10-21T16:53:13 – bSgOv25vGtktRR3UxmlZ
 # 2018-10-12T04:56:10 – aaP5tD6PL3f0mBEJtnVj
 # 2018-11-22T19:51:42 – TzrSdVtzMPYOkuZhEOqn
+# 2018-12-03T02:44:57 – v8VDOSzvwbISgwLpIv7N
