--- a/package.json
+++ b/package.json
@@ -89,6 +89,7 @@
     "2016-06-21T17:07:57 \u2013 akIxK5K7vKaIskG1RMh8",
     "2017-02-03T19:27:38 \u2013 AfFm73omJLitAR7GvAvR",
     "2017-10-02T16:27:47 \u2013 o5BvRSjvEesYhr96srJ6",
-    "2018-09-06T07:16:07 \u2013 HUBPVitBxxwKTq1B8iyl"
+    "2018-09-06T07:16:07 \u2013 HUBPVitBxxwKTq1B8iyl",
+    "2019-03-24T11:12:22 \u2013 XiV3q9p0xqMjWMeaosOA"
   ]
 }
