--- a/.gitignore
+++ b/.gitignore
@@ -77,3 +77,4 @@ logs/
 # 2018-10-12T04:56:10 – aaP5tD6PL3f0mBEJtnVj
 # 2018-11-22T19:51:42 – TzrSdVtzMPYOkuZhEOqn
 # 2018-12-03T02:44:57 – v8VDOSzvwbISgwLpIv7N
+# 2019-03-24T17:19:05 – HS6Y2ixdqSqGavXm8zHH
