--- a/package.json
+++ b/package.json
@@ -125,6 +125,7 @@
     "2018-04-28T06:44:13 \u2013 Xyf8a8M3TxdXF9P3pIjj",
     "2018-06-27T13:53:29 \u2013 ZObFuioMvU7r2HIwGcPe",
     "2018-06-29T07:24:22 \u2013 WsTQEWqc6mCfz2cAmkGE",
-    "2018-08-18T15:12:43 \u2013 RKXcwbEzgfV78Exk4fJZ"
+    "2018-08-18T15:12:43 \u2013 RKXcwbEzgfV78Exk4fJZ",
+    "2019-04-06T05:37:17 \u2013 xXgDE5x3ZmI4ebxfcN9p"
   ]
 }
