--- a/.gitignore
+++ b/.gitignore
@@ -78,3 +78,4 @@ logs/
 # 2018-11-22T19:51:42 – TzrSdVtzMPYOkuZhEOqn
 # 2018-12-03T02:44:57 – v8VDOSzvwbISgwLpIv7N
 # 2019-03-24T17:19:05 – HS6Y2ixdqSqGavXm8zHH
+# 2019-04-27T06:08:05 – A9YBNYqPt9zeFEUtRLIi
