--- a/.gitignore
+++ b/.gitignore
@@ -79,3 +79,4 @@ logs/
 # 2018-12-03T02:44:57 – v8VDOSzvwbISgwLpIv7N
 # 2019-03-24T17:19:05 – HS6Y2ixdqSqGavXm8zHH
 # 2019-04-27T06:08:05 – A9YBNYqPt9zeFEUtRLIi
+# 2019-05-23T03:23:12 – zZ7FfVTdO493q1BZRpHS
