BREAKING CHANGE: modify schema in .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -80,3 +80,4 @@ logs/
 # 2019-03-24T17:19:05 – HS6Y2ixdqSqGavXm8zHH
 # 2019-04-27T06:08:05 – A9YBNYqPt9zeFEUtRLIi
 # 2019-05-23T03:23:12 – zZ7FfVTdO493q1BZRpHS
+# 2019-06-12T13:19:18 – cmtUVqP4s4uCoy7kthAE
