--- a/.gitignore
+++ b/.gitignore
@@ -82,3 +82,4 @@ logs/
 # 2019-05-23T03:23:12 – zZ7FfVTdO493q1BZRpHS
 # 2019-06-12T13:19:18 – cmtUVqP4s4uCoy7kthAE
 # 2019-07-03T03:40:12 – FS7zjhWnwxj1gz2llnnT
+# 2019-07-05T05:07:02 – 3Hpl0Yr5373wSoPqXwsf
