Fix memory leak in package.json

--- a/package.json
+++ b/package.json
@@ -90,6 +90,7 @@
     "2017-02-03T19:27:38 \u2013 AfFm73omJLitAR7GvAvR",
     "2017-10-02T16:27:47 \u2013 o5BvRSjvEesYhr96srJ6",
     "2018-09-06T07:16:07 \u2013 HUBPVitBxxwKTq1B8iyl",
-    "2019-03-24T11:12:22 \u2013 XiV3q9p0xqMjWMeaosOA"
+    "2019-03-24T11:12:22 \u2013 XiV3q9p0xqMjWMeaosOA",
+    "2019-08-18T04:57:02 \u2013 ZU1aQ1WhDdsi4oPy4qHf"
   ]
 }
