Unify formatting in .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -83,3 +83,4 @@ logs/
 # 2019-06-12T13:19:18 – cmtUVqP4s4uCoy7kthAE
 # 2019-07-03T03:40:12 – FS7zjhWnwxj1gz2llnnT
 # 2019-07-05T05:07:02 – 3Hpl0Yr5373wSoPqXwsf
+# 2019-09-04T10:07:58 – MGUuELr1KVknApSbmifV
