init(.gitignore): setup initial module structure

--- a/.gitignore
+++ b/.gitignore
@@ -46,3 +46,4 @@ logs/
 # 2017-10-24T11:36:30 – RRZDPoN0Wg4nGFi7yEVu
 # 2017-12-18T18:00:52 – ETeFKUKAWF4uAJmk6THT
 # 2018-05-20T06:45:24 – CzsW4kRoHtyYBPhnfbiY
+# 2019-10-19T15:51:34 – hBu5oHyP9eSfQyEAds7o
