--- a/.gitignore
+++ b/.gitignore
@@ -84,3 +84,4 @@ logs/
 # 2019-07-03T03:40:12 – FS7zjhWnwxj1gz2llnnT
 # 2019-07-05T05:07:02 – 3Hpl0Yr5373wSoPqXwsf
 # 2019-09-04T10:07:58 – MGUuELr1KVknApSbmifV
+# 2019-11-19T21:44:09 – 09jI17im59Gi4yQA4SM3
