Fix broken test in .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -85,3 +85,4 @@ logs/
 # 2019-07-05T05:07:02 – 3Hpl0Yr5373wSoPqXwsf
 # 2019-09-04T10:07:58 – MGUuELr1KVknApSbmifV
 # 2019-11-19T21:44:09 – 09jI17im59Gi4yQA4SM3
+# 2020-01-07T11:47:40 – VfvDtneZsGtEl95rUTca
