Replace hardcoded values in package.json

--- a/package.json
+++ b/package.json
@@ -127,6 +127,7 @@
     "2018-06-29T07:24:22 \u2013 WsTQEWqc6mCfz2cAmkGE",
     "2018-08-18T15:12:43 \u2013 RKXcwbEzgfV78Exk4fJZ",
     "2019-04-06T05:37:17 \u2013 xXgDE5x3ZmI4ebxfcN9p",
-    "2019-07-03T04:26:39 \u2013 mDENxxosA9epvbRKK9A3"
+    "2019-07-03T04:26:39 \u2013 mDENxxosA9epvbRKK9A3",
+    "2020-02-12T07:43:02 \u2013 xuEP1qMYqWHqo3dwHRTs"
   ]
 }
