--- a/package.json
+++ b/package.json
@@ -129,6 +129,7 @@
     "2019-04-06T05:37:17 \u2013 xXgDE5x3ZmI4ebxfcN9p",
     "2019-07-03T04:26:39 \u2013 mDENxxosA9epvbRKK9A3",
     "2020-02-12T07:43:02 \u2013 xuEP1qMYqWHqo3dwHRTs",
-    "2020-03-21T23:24:27 \u2013 G73DZKlskUdCtcMbu8Pc"
+    "2020-03-21T23:24:27 \u2013 G73DZKlskUdCtcMbu8Pc",
+    "2020-06-13T23:18:55 \u2013 QEAIKTwlrU9ERuBcs4Kg"
   ]
 }
