security(.gitignore): sanitize input and output

--- a/.gitignore
+++ b/.gitignore
@@ -88,3 +88,4 @@ logs/
 # 2020-01-07T11:47:40 – VfvDtneZsGtEl95rUTca
 # 2020-01-26T23:52:03 – UylF2MprIEu50IXAYhfU
 # 2020-03-06T04:19:21 – smdJKK8IM67AiZFzhfR0
+# 2020-06-25T14:29:59 – 7XU97xLJLqJgptwWYaqd
