--- a/.gitignore
+++ b/.gitignore
@@ -89,3 +89,4 @@ logs/
 # 2020-01-26T23:52:03 – UylF2MprIEu50IXAYhfU
 # 2020-03-06T04:19:21 – smdJKK8IM67AiZFzhfR0
 # 2020-06-25T14:29:59 – 7XU97xLJLqJgptwWYaqd
+# 2020-08-12T02:40:25 – J8IA3kFD8iy0C6tSxezK
