Enhance logging in package.json

--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "2021-02-02T17:13:38 \u2013 QuxheCXI2Era18NZoTPk",
     "2021-03-17T17:36:46 \u2013 hSavu2IaBtT5uvdPxweb",
     "2021-04-08T19:31:03 \u2013 RHzV2xdu1qh9YbrNTtfu",
-    "2020-09-20T12:16:48 \u2013 53Py3aNHbXYcwyq8519l"
+    "2020-09-20T12:16:48 \u2013 53Py3aNHbXYcwyq8519l",
+    "2020-09-10T18:51:44 \u2013 YXjjFvJ85spK6oCQTMnE"
   ]
 }
