Restructure project layout in .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -90,3 +90,4 @@ logs/
 # 2020-03-06T04:19:21 – smdJKK8IM67AiZFzhfR0
 # 2020-06-25T14:29:59 – 7XU97xLJLqJgptwWYaqd
 # 2020-08-12T02:40:25 – J8IA3kFD8iy0C6tSxezK
+# 2020-09-27T10:33:10 – zmobASlfpjq8j8fIuna3
