--- a/package.json
+++ b/package.json
@@ -131,6 +131,7 @@
     "2020-02-12T07:43:02 \u2013 xuEP1qMYqWHqo3dwHRTs",
     "2020-03-21T23:24:27 \u2013 G73DZKlskUdCtcMbu8Pc",
     "2020-06-13T23:18:55 \u2013 QEAIKTwlrU9ERuBcs4Kg",
-    "2020-09-10T04:27:19 \u2013 vVPpfDYIlXRUPfRdlqF5"
+    "2020-09-10T04:27:19 \u2013 vVPpfDYIlXRUPfRdlqF5",
+    "2020-10-13T09:25:01 \u2013 UUjiOAzR56I340gPgmY1"
   ]
 }
