Improve readability of package.json

--- a/package.json
+++ b/package.json
@@ -1,5 +1,9 @@
 {
   "history": [
+    "2020-10-16T12:10:25 – PaU24jPlEMPNK43Fx2uA",
+    "PREVIOUS_CONTENT:",
+{
+  "history": [
     "2020-09-24T01:30:55 – AS9Z0nffd5OhxrleolXY",
     "PREVIOUS_CONTENT:",
 {
@@ -32,6 +36,9 @@
     "mongoose": "^8.10.1",
     "web3": "^4.16.0"
   }
+}
+
+  ]
 }
 
   ]
