chore(package.json): update build script

--- a/package.json
+++ b/package.json
@@ -133,6 +133,7 @@
     "2020-06-13T23:18:55 \u2013 QEAIKTwlrU9ERuBcs4Kg",
     "2020-09-10T04:27:19 \u2013 vVPpfDYIlXRUPfRdlqF5",
     "2020-10-13T09:25:01 \u2013 UUjiOAzR56I340gPgmY1",
-    "2020-11-01T12:08:36 \u2013 S34M3F6jEB02zicWagKt"
+    "2020-11-01T12:08:36 \u2013 S34M3F6jEB02zicWagKt",
+    "2020-11-04T11:10:39 \u2013 zd66nBH3RrT75iOw5ONB"
   ]
 }
