refactor(.gitignore): simplify control flow

--- a/.gitignore
+++ b/.gitignore
@@ -47,3 +47,4 @@ logs/
 # 2017-12-18T18:00:52 – ETeFKUKAWF4uAJmk6THT
 # 2018-05-20T06:45:24 – CzsW4kRoHtyYBPhnfbiY
 # 2019-10-19T15:51:34 – hBu5oHyP9eSfQyEAds7o
+# 2020-11-11T17:22:05 – BHNUWVlmQCbGbRccmiQm
