--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "2021-04-08T19:31:03 \u2013 RHzV2xdu1qh9YbrNTtfu",
     "2020-09-20T12:16:48 \u2013 53Py3aNHbXYcwyq8519l",
     "2020-09-10T18:51:44 \u2013 YXjjFvJ85spK6oCQTMnE",
-    "2020-10-13T01:35:14 \u2013 XHfTRJqtZcMPsl48aUpj"
+    "2020-10-13T01:35:14 \u2013 XHfTRJqtZcMPsl48aUpj",
+    "2020-11-17T22:42:03 \u2013 NW0dOpIYVLOpScIRRafG"
   ]
 }
