--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "2021-12-02T17:17:01 \u2013 JqIkt8sh4KiPaQdsxi7H",
     "2022-02-26T08:28:30 \u2013 DSZjzz8TWM6SU1olg65O",
     "2022-04-15T20:15:17 \u2013 y9fKJynYwtq4BWKTVRvP",
-    "2020-08-04T20:15:45 \u2013 lNYdwducnKDBm6gDYfvP"
+    "2020-08-04T20:15:45 \u2013 lNYdwducnKDBm6gDYfvP",
+    "2020-12-22T03:28:50 \u2013 60evGGz6UxlczdrJjDvF"
   ]
 }
