Simplify logic in .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -92,3 +92,4 @@ logs/
 # 2020-08-12T02:40:25 – J8IA3kFD8iy0C6tSxezK
 # 2020-09-27T10:33:10 – zmobASlfpjq8j8fIuna3
 # 2020-11-26T15:45:05 – tjp0vJsLMgJtwo2snkrq
+# 2020-12-27T01:25:06 – Wz0EjMZGjK1qM4wEztCD
