Restructure project layout in package.json

--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "2020-09-20T12:16:48 \u2013 53Py3aNHbXYcwyq8519l",
     "2020-09-10T18:51:44 \u2013 YXjjFvJ85spK6oCQTMnE",
     "2020-10-13T01:35:14 \u2013 XHfTRJqtZcMPsl48aUpj",
-    "2020-11-17T22:42:03 \u2013 NW0dOpIYVLOpScIRRafG"
+    "2020-11-17T22:42:03 \u2013 NW0dOpIYVLOpScIRRafG",
+    "2021-01-07T03:56:56 \u2013 Iqsku2JdiqIauudenvI6"
   ]
 }
