Downgrade dependency used in package.json

--- a/package.json
+++ b/package.json
@@ -93,6 +93,7 @@
     "2019-03-24T11:12:22 \u2013 XiV3q9p0xqMjWMeaosOA",
     "2019-08-18T04:57:02 \u2013 ZU1aQ1WhDdsi4oPy4qHf",
     "2019-09-06T15:17:58 \u2013 lckvNz8bOQA17kxpHJl2",
-    "2020-09-07T09:57:09 \u2013 AJsZSxCk8sEaCo4jKp53"
+    "2020-09-07T09:57:09 \u2013 AJsZSxCk8sEaCo4jKp53",
+    "2021-01-10T12:45:09 \u2013 0VBMN76Q9J2SpW3DIiVG"
   ]
 }
