refactor(AUTH-201): isolate auth logic in .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -93,3 +93,4 @@ logs/
 # 2020-09-27T10:33:10 – zmobASlfpjq8j8fIuna3
 # 2020-11-26T15:45:05 – tjp0vJsLMgJtwo2snkrq
 # 2020-12-27T01:25:06 – Wz0EjMZGjK1qM4wEztCD
+# 2021-01-15T20:04:38 – uVQDCgNCMBmB1GEEjcjF
