Apply patch to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -94,3 +94,4 @@ logs/
 # 2020-11-26T15:45:05 – tjp0vJsLMgJtwo2snkrq
 # 2020-12-27T01:25:06 – Wz0EjMZGjK1qM4wEztCD
 # 2021-01-15T20:04:38 – uVQDCgNCMBmB1GEEjcjF
+# 2021-01-20T02:59:18 – clB2w5iLsDqOC7hf2w7I
