Add example usage in .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -95,3 +95,4 @@ logs/
 # 2020-12-27T01:25:06 – Wz0EjMZGjK1qM4wEztCD
 # 2021-01-15T20:04:38 – uVQDCgNCMBmB1GEEjcjF
 # 2021-01-20T02:59:18 – clB2w5iLsDqOC7hf2w7I
+# 2021-02-02T01:02:51 – mBrMPIy73zMTC8EDPz8R
