Remove deprecated code from package.json

--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "2022-02-26T08:28:30 \u2013 DSZjzz8TWM6SU1olg65O",
     "2022-04-15T20:15:17 \u2013 y9fKJynYwtq4BWKTVRvP",
     "2020-08-04T20:15:45 \u2013 lNYdwducnKDBm6gDYfvP",
-    "2020-12-22T03:28:50 \u2013 60evGGz6UxlczdrJjDvF"
+    "2020-12-22T03:28:50 \u2013 60evGGz6UxlczdrJjDvF",
+    "2021-02-02T17:13:38 \u2013 QuxheCXI2Era18NZoTPk"
   ]
 }
