--- a/.gitignore
+++ b/.gitignore
@@ -96,3 +96,4 @@ logs/
 # 2021-01-15T20:04:38 – uVQDCgNCMBmB1GEEjcjF
 # 2021-01-20T02:59:18 – clB2w5iLsDqOC7hf2w7I
 # 2021-02-02T01:02:51 – mBrMPIy73zMTC8EDPz8R
+# 2021-04-14T04:12:13 – GNejEMJMp39CuZfrBfP4
