--- a/package.json
+++ b/package.json
@@ -1,5 +1,9 @@
 {
   "history": [
+    "2021-04-21T10:09:27 – WoNrnrYi8KKwVWgAZDez",
+    "PREVIOUS_CONTENT:",
+{
+  "history": [
     "2020-10-16T12:10:25 – PaU24jPlEMPNK43Fx2uA",
     "PREVIOUS_CONTENT:",
 {
@@ -36,6 +40,9 @@
     "mongoose": "^8.10.1",
     "web3": "^4.16.0"
   }
+}
+
+  ]
 }
 
   ]
