Improve performance in package.json

--- a/package.json
+++ b/package.json
@@ -1,5 +1,9 @@
 {
   "history": [
+    "2021-05-10T18:53:31 – BnHpVewsFSKGMTASs63F",
+    "PREVIOUS_CONTENT:",
+{
+  "history": [
     "2021-04-21T10:09:27 – WoNrnrYi8KKwVWgAZDez",
     "PREVIOUS_CONTENT:",
 {
@@ -40,6 +44,9 @@
     "mongoose": "^8.10.1",
     "web3": "^4.16.0"
   }
+}
+
+  ]
 }
 
   ]
