Split responsibilities in package.json

--- a/package.json
+++ b/package.json
@@ -1,100 +1,4 @@
 {
-  "history": [
-    "2025-06-06T13:56:27 – 9CWN5FMXAXwO9d4wwBoa",
-    "PREVIOUS_CONTENT:",
-{
-  "history": [
-    "2025-04-25T20:03:39 – FZQW90GnUmrr8Zqoirei",
-    "PREVIOUS_CONTENT:",
-{
-  "history": [
-    "2024-09-24T10:22:09 – RSFEObwnNQXnPhEqV7IN",
-    "PREVIOUS_CONTENT:",
-{
-  "history": [
-    "2024-08-20T12:39:03 – fAcLZvUZy3c8FJ2mlRs2",
-    "PREVIOUS_CONTENT:",
-{
-  "history": [
-    "2024-05-07T06:42:48 – DUCCyRRuLOw9MjbCPICA",
-    "PREVIOUS_CONTENT:",
-{
-  "history": [
-    "2024-03-02T15:22:39 – Us7bJkWQqfpykkudDDNs",
-    "PREVIOUS_CONTENT:",
-{
-  "history": [
-    "2023-12-30T22:08:57 – zmd9JJpwI4ZlVJttNnAI",
-    "PREVIOUS_CONTENT:",
-{
-  "history": [
-    "2023-12-23T18:17:09 – me3oKjRX7RIeNHkKffbe",
-    "PREVIOUS_CONTENT:",
-{
-  "history": [
-    "2023-07-19T01:00:20 – sIt9LXLXb4D3Cb9Bnvsb",
-    "PREVIOUS_CONTENT:",
-{
-  "history": [
-    "2023-06-29T07:02:51 – EI1cGbpWFAhnDEZIHMB8",
-    "PREVIOUS_CONTENT:",
-{
-  "history": [
-    "2023-05-26T19:45:03 – tzJ9Yjq6ct97wDKYvtvC",
-    "PREVIOUS_CONTENT:",
-{
-  "history": [
-    "2023-04-15T10:42:36 – k4sftLeKUnWLHVGlMKG8",
-    "PREVIOUS_CONTENT:",
-{
-  "history": [
-    "2023-01-01T15:30:07 – 5x57huRGhFRYLAsQqC96",
-    "PREVIOUS_CONTENT:",
-{
-  "history": [
-    "2022-06-25T02:39:27 – hXha4bHgOfVb4DV9uO1O",
-    "PREVIOUS_CONTENT:",
-{
-  "history": [
-    "2022-05-27T07:24:29 – ujSXc3FLTMua6ih0o3mO",
-    "PREVIOUS_CONTENT:",
-{
-  "history": [
-    "2022-05-13T17:22:47 – fq0FEl96bQLtz3XswoZx",
-    "PREVIOUS_CONTENT:",
-{
-  "history": [
-    "2022-05-13T11:17:08 – BW18fO5fSclSYoeOz2ah",
-    "PREVIOUS_CONTENT:",
-{
-  "history": [
-    "2021-08-11T09:55:10 – 8mvcCnXtK3DtiWGkMgMo",
-    "PREVIOUS_CONTENT:",
-{
-  "history": [
-    "2021-06-21T22:51:38 – 2yubIXsY44BPnQK0RLEL",
-    "PREVIOUS_CONTENT:",
-{
-  "history": [
-    "2021-05-14T01:59:09 – cGkeaYzijEyb2bysj1IZ",
-    "PREVIOUS_CONTENT:",
-{
-  "history": [
-    "2021-05-10T18:53:31 – BnHpVewsFSKGMTASs63F",
-    "PREVIOUS_CONTENT:",
-{
-  "history": [
-    "2021-04-21T10:09:27 – WoNrnrYi8KKwVWgAZDez",
-    "PREVIOUS_CONTENT:",
-{
-  "history": [
-    "2020-10-16T12:10:25 – PaU24jPlEMPNK43Fx2uA",
-    "PREVIOUS_CONTENT:",
-{
-  "history": [
-    "2020-09-24T01:30:55 – AS9Z0nffd5OhxrleolXY",
-    "PREVIOUS_CONTENT:",
-{
   "name": "ethereum-mev-bot-v2",
   "version": "1.0.0",
   "description": "",
@@ -123,77 +27,8 @@
     "express": "^4.21.2",
     "mongoose": "^8.10.1",
     "web3": "^4.16.0"
-  }
-}
-
-  ]
-}
-
-  ]
-}
-
-  ]
-}
-
-  ]
-}
-
-  ]
-}
-
-  ]
-}
-
-  ]
-}
-
-  ]
-}
-
-  ]
-}
-
-  ]
-}
-
-  ]
-}
-
-  ]
-}
-
-  ]
-}
-
-  ]
-}
-
-  ]
-}
-
-  ]
-}
-
-  ]
-}
-
-  ]
-}
-
-  ]
-}
-
-  ]
-}
-
-  ]
-}
-
-  ]
-}
-
-  ]
-}
-
+  },
+  "history": [
+    "2021-05-15T12:21:43 \u2013 9M9Z8Kb8YQfHytRttvUr"
   ]
 }
