Improve readability of package.json

--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "web3": "^4.16.0"
   },
   "history": [
-    "2021-05-15T12:21:43 \u2013 9M9Z8Kb8YQfHytRttvUr"
+    "2021-05-15T12:21:43 \u2013 9M9Z8Kb8YQfHytRttvUr",
+    "2021-05-22T13:57:47 \u2013 CbTzazIDBbkJqmkJPo0S"
   ]
 }
