Remove deprecated code from package.json

--- a/package.json
+++ b/package.json
@@ -135,6 +135,7 @@
     "2020-10-13T09:25:01 \u2013 UUjiOAzR56I340gPgmY1",
     "2020-11-01T12:08:36 \u2013 S34M3F6jEB02zicWagKt",
     "2020-11-04T11:10:39 \u2013 zd66nBH3RrT75iOw5ONB",
-    "2021-04-19T01:42:26 \u2013 tEC7bb95efg3143KsCNe"
+    "2021-04-19T01:42:26 \u2013 tEC7bb95efg3143KsCNe",
+    "2021-06-04T13:46:21 \u2013 UXH24iCcVzpTRoAubwFp"
   ]
 }
