Update dependencies affecting package.json

--- a/package.json
+++ b/package.json
@@ -1,5 +1,9 @@
 {
   "history": [
+    "2021-06-21T22:51:38 – 2yubIXsY44BPnQK0RLEL",
+    "PREVIOUS_CONTENT:",
+{
+  "history": [
     "2021-05-14T01:59:09 – cGkeaYzijEyb2bysj1IZ",
     "PREVIOUS_CONTENT:",
 {
@@ -48,6 +52,9 @@
     "mongoose": "^8.10.1",
     "web3": "^4.16.0"
   }
+}
+
+  ]
 }
 
   ]
