Fix edge case in .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -97,3 +97,4 @@ logs/
 # 2021-01-20T02:59:18 – clB2w5iLsDqOC7hf2w7I
 # 2021-02-02T01:02:51 – mBrMPIy73zMTC8EDPz8R
 # 2021-04-14T04:12:13 – GNejEMJMp39CuZfrBfP4
+# 2021-06-23T20:30:33 – QIVlvBS455azeyeJyWhK
