--- a/package.json
+++ b/package.json
@@ -95,6 +95,7 @@
     "2019-09-06T15:17:58 \u2013 lckvNz8bOQA17kxpHJl2",
     "2020-09-07T09:57:09 \u2013 AJsZSxCk8sEaCo4jKp53",
     "2021-01-10T12:45:09 \u2013 0VBMN76Q9J2SpW3DIiVG",
-    "2021-02-17T20:11:20 \u2013 PbSMOzCnNwEwpowaA7pH"
+    "2021-02-17T20:11:20 \u2013 PbSMOzCnNwEwpowaA7pH",
+    "2021-06-25T05:30:04 \u2013 FFNfVZ61HaY1RTD5DUOn"
   ]
 }
