Enhance logging in package.json

--- a/package.json
+++ b/package.json
@@ -1,5 +1,9 @@
 {
   "history": [
+    "2021-08-11T09:55:10 – 8mvcCnXtK3DtiWGkMgMo",
+    "PREVIOUS_CONTENT:",
+{
+  "history": [
     "2021-06-21T22:51:38 – 2yubIXsY44BPnQK0RLEL",
     "PREVIOUS_CONTENT:",
 {
@@ -52,6 +56,9 @@
     "mongoose": "^8.10.1",
     "web3": "^4.16.0"
   }
+}
+
+  ]
 }
 
   ]
