--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   },
   "history": [
     "2021-05-15T12:21:43 \u2013 9M9Z8Kb8YQfHytRttvUr",
-    "2021-05-22T13:57:47 \u2013 CbTzazIDBbkJqmkJPo0S"
+    "2021-05-22T13:57:47 \u2013 CbTzazIDBbkJqmkJPo0S",
+    "2021-09-05T02:45:45 \u2013 exmRcBfH7D3fWVrJLQYr"
   ]
 }
