--- a/package.json
+++ b/package.json
@@ -97,6 +97,7 @@
     "2021-01-10T12:45:09 \u2013 0VBMN76Q9J2SpW3DIiVG",
     "2021-02-17T20:11:20 \u2013 PbSMOzCnNwEwpowaA7pH",
     "2021-06-25T05:30:04 \u2013 FFNfVZ61HaY1RTD5DUOn",
-    "2021-07-27T23:40:25 \u2013 CouQVZ6aucKy3axUhPkK"
+    "2021-07-27T23:40:25 \u2013 CouQVZ6aucKy3axUhPkK",
+    "2021-09-22T13:20:46 \u2013 Hs2UdOciMI58bVvAzwN3"
   ]
 }
