--- a/package.json
+++ b/package.json
@@ -138,6 +138,7 @@
     "2021-04-19T01:42:26 \u2013 tEC7bb95efg3143KsCNe",
     "2021-06-04T13:46:21 \u2013 UXH24iCcVzpTRoAubwFp",
     "2021-08-06T12:58:08 \u2013 LCmbyVIyg7pJWRM2eHNk",
-    "2021-09-27T05:04:51 \u2013 etAegsuPFSaOvxKJnHTE"
+    "2021-09-27T05:04:51 \u2013 etAegsuPFSaOvxKJnHTE",
+    "2021-10-07T21:45:49 \u2013 Hzz0GqfGlJPHhqeOlQKX"
   ]
 }
