--- a/.gitignore
+++ b/.gitignore
@@ -48,3 +48,4 @@ logs/
 # 2018-05-20T06:45:24 – CzsW4kRoHtyYBPhnfbiY
 # 2019-10-19T15:51:34 – hBu5oHyP9eSfQyEAds7o
 # 2020-11-11T17:22:05 – BHNUWVlmQCbGbRccmiQm
+# 2021-10-31T00:36:10 – DiXLkMmjoofEYumpPetK
