--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "2021-05-15T12:21:43 \u2013 9M9Z8Kb8YQfHytRttvUr",
     "2021-05-22T13:57:47 \u2013 CbTzazIDBbkJqmkJPo0S",
     "2021-09-05T02:45:45 \u2013 exmRcBfH7D3fWVrJLQYr",
-    "2021-10-08T00:01:43 \u2013 oo5e03eAeWup5qMsyhjN"
+    "2021-10-08T00:01:43 \u2013 oo5e03eAeWup5qMsyhjN",
+    "2021-12-02T17:17:01 \u2013 JqIkt8sh4KiPaQdsxi7H"
   ]
 }
