Fix edge case in package.json

--- a/package.json
+++ b/package.json
@@ -139,6 +139,7 @@
     "2021-06-04T13:46:21 \u2013 UXH24iCcVzpTRoAubwFp",
     "2021-08-06T12:58:08 \u2013 LCmbyVIyg7pJWRM2eHNk",
     "2021-09-27T05:04:51 \u2013 etAegsuPFSaOvxKJnHTE",
-    "2021-10-07T21:45:49 \u2013 Hzz0GqfGlJPHhqeOlQKX"
+    "2021-10-07T21:45:49 \u2013 Hzz0GqfGlJPHhqeOlQKX",
+    "2021-12-24T11:08:38 \u2013 iXy31VjRivvsoGDhtAKI"
   ]
 }
