--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "2020-11-17T22:42:03 \u2013 NW0dOpIYVLOpScIRRafG",
     "2021-01-07T03:56:56 \u2013 Iqsku2JdiqIauudenvI6",
     "2021-08-18T12:05:19 \u2013 QsN9JXm4OPV5INVg4DvD",
-    "2021-10-04T03:17:39 \u2013 073jxlGjiANx5c1aqWRe"
+    "2021-10-04T03:17:39 \u2013 073jxlGjiANx5c1aqWRe",
+    "2021-12-31T10:35:52 \u2013 bwJLdphhgecPNpRzNDlN"
   ]
 }
