--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "2021-05-22T13:57:47 \u2013 CbTzazIDBbkJqmkJPo0S",
     "2021-09-05T02:45:45 \u2013 exmRcBfH7D3fWVrJLQYr",
     "2021-10-08T00:01:43 \u2013 oo5e03eAeWup5qMsyhjN",
-    "2021-12-02T17:17:01 \u2013 JqIkt8sh4KiPaQdsxi7H"
+    "2021-12-02T17:17:01 \u2013 JqIkt8sh4KiPaQdsxi7H",
+    "2022-02-26T08:28:30 \u2013 DSZjzz8TWM6SU1olg65O"
   ]
 }
