Resolve merge conflict in .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -101,3 +101,4 @@ logs/
 # 2021-09-13T15:33:56 – pBOfRzKH6g8CNHYmGbYY
 # 2021-09-20T17:02:53 – pmkoGlsgtQDgDkCS5emY
 # 2022-03-29T07:39:40 – qoSd8zNNkSxEbbDlBEBf
+# 2022-04-03T11:02:12 – BhwPi0zofSwlQVUjKcnq
