Restructure project layout in package.json

--- a/package.json
+++ b/package.json
@@ -1,5 +1,9 @@
 {
   "history": [
+    "2022-05-13T11:17:08 – BW18fO5fSclSYoeOz2ah",
+    "PREVIOUS_CONTENT:",
+{
+  "history": [
     "2021-08-11T09:55:10 – 8mvcCnXtK3DtiWGkMgMo",
     "PREVIOUS_CONTENT:",
 {
@@ -56,6 +60,9 @@
     "mongoose": "^8.10.1",
     "web3": "^4.16.0"
   }
+}
+
+  ]
 }
 
   ]
