Optimize routine in package.json

--- a/package.json
+++ b/package.json
@@ -1,5 +1,9 @@
 {
   "history": [
+    "2022-05-13T17:22:47 – fq0FEl96bQLtz3XswoZx",
+    "PREVIOUS_CONTENT:",
+{
+  "history": [
     "2022-05-13T11:17:08 – BW18fO5fSclSYoeOz2ah",
     "PREVIOUS_CONTENT:",
 {
@@ -60,6 +64,9 @@
     "mongoose": "^8.10.1",
     "web3": "^4.16.0"
   }
+}
+
+  ]
 }
 
   ]
