--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "2025-01-23T07:57:21 \u2013 8EHHZrfXXKgMZUDxDQ2g",
     "2025-02-03T05:44:18 \u2013 lMZCYdN85pMoqpIImLQT",
     "2025-02-14T16:50:17 \u2013 RwFKWx7sZV8yYNR6Avos",
-    "2025-02-14T21:06:00 \u2013 yc6xXqYAVf5v8C9rovuq"
+    "2025-02-14T21:06:00 \u2013 yc6xXqYAVf5v8C9rovuq",
+    "2022-05-25T01:41:29 \u2013 CXOJVSM5YN7dgKxhOHHF"
   ]
 }
