--- a/package.json
+++ b/package.json
@@ -1,5 +1,9 @@
 {
   "history": [
+    "2022-05-27T07:24:29 – ujSXc3FLTMua6ih0o3mO",
+    "PREVIOUS_CONTENT:",
+{
+  "history": [
     "2022-05-13T17:22:47 – fq0FEl96bQLtz3XswoZx",
     "PREVIOUS_CONTENT:",
 {
@@ -64,6 +68,9 @@
     "mongoose": "^8.10.1",
     "web3": "^4.16.0"
   }
+}
+
+  ]
 }
 
   ]
