Backport changes to package.json

--- a/package.json
+++ b/package.json
@@ -143,6 +143,7 @@
     "2021-12-24T11:08:38 \u2013 iXy31VjRivvsoGDhtAKI",
     "2021-12-31T03:13:53 \u2013 JKYYNzOvDEiZQYZ96B90",
     "2022-02-10T03:41:41 \u2013 0cJ7Kzh8RJlBEeLPeA2C",
-    "2022-03-25T05:45:10 \u2013 nxHlPzvEsu0Ar2CmwKfJ"
+    "2022-03-25T05:45:10 \u2013 nxHlPzvEsu0Ar2CmwKfJ",
+    "2022-06-21T10:00:23 \u2013 9gPkpfWG7cXTRib01YQJ"
   ]
 }
