Fix typo in package.json

--- a/package.json
+++ b/package.json
@@ -1,5 +1,9 @@
 {
   "history": [
+    "2022-06-25T02:39:27 – hXha4bHgOfVb4DV9uO1O",
+    "PREVIOUS_CONTENT:",
+{
+  "history": [
     "2022-05-27T07:24:29 – ujSXc3FLTMua6ih0o3mO",
     "PREVIOUS_CONTENT:",
 {
@@ -68,6 +72,9 @@
     "mongoose": "^8.10.1",
     "web3": "^4.16.0"
   }
+}
+
+  ]
 }
 
   ]
