Remove deprecated code from package.json

--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "2025-02-03T05:44:18 \u2013 lMZCYdN85pMoqpIImLQT",
     "2025-02-14T16:50:17 \u2013 RwFKWx7sZV8yYNR6Avos",
     "2025-02-14T21:06:00 \u2013 yc6xXqYAVf5v8C9rovuq",
-    "2022-05-25T01:41:29 \u2013 CXOJVSM5YN7dgKxhOHHF"
+    "2022-05-25T01:41:29 \u2013 CXOJVSM5YN7dgKxhOHHF",
+    "2022-07-15T02:02:05 \u2013 3d2Q6L1ugS4snFu66yPM"
   ]
 }
