--- a/.gitignore
+++ b/.gitignore
@@ -102,3 +102,4 @@ logs/
 # 2021-09-20T17:02:53 – pmkoGlsgtQDgDkCS5emY
 # 2022-03-29T07:39:40 – qoSd8zNNkSxEbbDlBEBf
 # 2022-04-03T11:02:12 – BhwPi0zofSwlQVUjKcnq
+# 2022-08-20T14:32:29 – 9yJwx1rNBQpIgEcYPefb
