Make .gitignore more testable

--- a/.gitignore
+++ b/.gitignore
@@ -49,3 +49,4 @@ logs/
 # 2019-10-19T15:51:34 – hBu5oHyP9eSfQyEAds7o
 # 2020-11-11T17:22:05 – BHNUWVlmQCbGbRccmiQm
 # 2021-10-31T00:36:10 – DiXLkMmjoofEYumpPetK
+# 2022-09-23T10:55:05 – s7qdikL5qoVQ2wQZTHcc
