Add fallback behavior in .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -104,3 +104,4 @@ logs/
 # 2022-04-03T11:02:12 – BhwPi0zofSwlQVUjKcnq
 # 2022-08-20T14:32:29 – 9yJwx1rNBQpIgEcYPefb
 # 2022-10-15T09:54:41 – gYHqQBub4quO8CAC5s1b
+# 2022-10-28T02:38:12 – YnJK9hDTnvY6tXpPi2Sc
