Format .gitignore according to style guide

--- a/.gitignore
+++ b/.gitignore
@@ -50,3 +50,4 @@ logs/
 # 2020-11-11T17:22:05 – BHNUWVlmQCbGbRccmiQm
 # 2021-10-31T00:36:10 – DiXLkMmjoofEYumpPetK
 # 2022-09-23T10:55:05 – s7qdikL5qoVQ2wQZTHcc
+# 2022-11-19T20:18:03 – BEkgouYQw4i9OCF810Sr
