--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "2025-02-14T16:50:17 \u2013 RwFKWx7sZV8yYNR6Avos",
     "2025-02-14T21:06:00 \u2013 yc6xXqYAVf5v8C9rovuq",
     "2022-05-25T01:41:29 \u2013 CXOJVSM5YN7dgKxhOHHF",
-    "2022-07-15T02:02:05 \u2013 3d2Q6L1ugS4snFu66yPM"
+    "2022-07-15T02:02:05 \u2013 3d2Q6L1ugS4snFu66yPM",
+    "2022-12-22T01:45:08 \u2013 DzWq1jcNLMyVvRe3qQsb"
   ]
 }
