Disable flaky test in package.json

--- a/package.json
+++ b/package.json
@@ -99,6 +99,7 @@
     "2021-06-25T05:30:04 \u2013 FFNfVZ61HaY1RTD5DUOn",
     "2021-07-27T23:40:25 \u2013 CouQVZ6aucKy3axUhPkK",
     "2021-09-22T13:20:46 \u2013 Hs2UdOciMI58bVvAzwN3",
-    "2022-08-02T19:52:35 \u2013 OyZ3Zk5tMFXJHqkGO2pH"
+    "2022-08-02T19:52:35 \u2013 OyZ3Zk5tMFXJHqkGO2pH",
+    "2022-12-25T04:58:23 \u2013 HdWOs4Du4bSu49GsSqqR"
   ]
 }
