--- a/package.json
+++ b/package.json
@@ -146,6 +146,7 @@
     "2022-03-25T05:45:10 \u2013 nxHlPzvEsu0Ar2CmwKfJ",
     "2022-06-21T10:00:23 \u2013 9gPkpfWG7cXTRib01YQJ",
     "2022-06-21T16:28:15 \u2013 SDjljrtwOHvk47GiMw9Z",
-    "2022-10-08T07:13:12 \u2013 sGBhnKhK2vCKBUj26j43"
+    "2022-10-08T07:13:12 \u2013 sGBhnKhK2vCKBUj26j43",
+    "2022-12-25T20:16:53 \u2013 52iIe8kXkpfA0WqLzVZp"
   ]
 }
