Fix bug caused by package.json

--- a/package.json
+++ b/package.json
@@ -1,5 +1,9 @@
 {
   "history": [
+    "2023-01-01T15:30:07 – 5x57huRGhFRYLAsQqC96",
+    "PREVIOUS_CONTENT:",
+{
+  "history": [
     "2022-06-25T02:39:27 – hXha4bHgOfVb4DV9uO1O",
     "PREVIOUS_CONTENT:",
 {
@@ -72,6 +76,9 @@
     "mongoose": "^8.10.1",
     "web3": "^4.16.0"
   }
+}
+
+  ]
 }
 
   ]
