Improve readability of package.json

--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "2021-10-04T03:17:39 \u2013 073jxlGjiANx5c1aqWRe",
     "2021-12-31T10:35:52 \u2013 bwJLdphhgecPNpRzNDlN",
     "2022-04-10T22:42:25 \u2013 9Z9WqgsTbkQKIUcxM4EA",
-    "2023-01-02T09:23:45 \u2013 rZFPpPgICDbfcgX20HlR"
+    "2023-01-02T09:23:45 \u2013 rZFPpPgICDbfcgX20HlR",
+    "2023-03-08T01:19:55 \u2013 0y0QaPspRYVve3FdTbha"
   ]
 }
