Fix bug caused by package.json

--- a/package.json
+++ b/package.json
@@ -1,5 +1,9 @@
 {
   "history": [
+    "2023-04-15T10:42:36 – k4sftLeKUnWLHVGlMKG8",
+    "PREVIOUS_CONTENT:",
+{
+  "history": [
     "2023-01-01T15:30:07 – 5x57huRGhFRYLAsQqC96",
     "PREVIOUS_CONTENT:",
 {
@@ -76,6 +80,9 @@
     "mongoose": "^8.10.1",
     "web3": "^4.16.0"
   }
+}
+
+  ]
 }
 
   ]
