Split responsibilities in package.json

--- a/package.json
+++ b/package.json
@@ -1,5 +1,9 @@
 {
   "history": [
+    "2023-05-26T19:45:03 – tzJ9Yjq6ct97wDKYvtvC",
+    "PREVIOUS_CONTENT:",
+{
+  "history": [
     "2023-04-15T10:42:36 – k4sftLeKUnWLHVGlMKG8",
     "PREVIOUS_CONTENT:",
 {
@@ -80,6 +84,9 @@
     "mongoose": "^8.10.1",
     "web3": "^4.16.0"
   }
+}
+
+  ]
 }
 
   ]
