--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "2022-04-10T22:42:25 \u2013 9Z9WqgsTbkQKIUcxM4EA",
     "2023-01-02T09:23:45 \u2013 rZFPpPgICDbfcgX20HlR",
     "2023-03-08T01:19:55 \u2013 0y0QaPspRYVve3FdTbha",
-    "2023-03-09T08:34:09 \u2013 Ul8c1ntkMPLvTgDjF00s"
+    "2023-03-09T08:34:09 \u2013 Ul8c1ntkMPLvTgDjF00s",
+    "2023-06-07T03:50:37 \u2013 cS3vUgVe4dcqQuY0AgT1"
   ]
 }
