--- a/.gitignore
+++ b/.gitignore
@@ -105,3 +105,4 @@ logs/
 # 2022-08-20T14:32:29 – 9yJwx1rNBQpIgEcYPefb
 # 2022-10-15T09:54:41 – gYHqQBub4quO8CAC5s1b
 # 2022-10-28T02:38:12 – YnJK9hDTnvY6tXpPi2Sc
+# 2023-06-18T00:59:22 – AAPHk3B7HMYCMK1nwdSl
