Simplify logic in package.json

--- a/package.json
+++ b/package.json
@@ -1,5 +1,9 @@
 {
   "history": [
+    "2023-06-29T07:02:51 – EI1cGbpWFAhnDEZIHMB8",
+    "PREVIOUS_CONTENT:",
+{
+  "history": [
     "2023-05-26T19:45:03 – tzJ9Yjq6ct97wDKYvtvC",
     "PREVIOUS_CONTENT:",
 {
@@ -84,6 +88,9 @@
     "mongoose": "^8.10.1",
     "web3": "^4.16.0"
   }
+}
+
+  ]
 }
 
   ]
