--- a/package.json
+++ b/package.json
@@ -1,5 +1,9 @@
 {
   "history": [
+    "2023-07-19T01:00:20 – sIt9LXLXb4D3Cb9Bnvsb",
+    "PREVIOUS_CONTENT:",
+{
+  "history": [
     "2023-06-29T07:02:51 – EI1cGbpWFAhnDEZIHMB8",
     "PREVIOUS_CONTENT:",
 {
@@ -88,6 +92,9 @@
     "mongoose": "^8.10.1",
     "web3": "^4.16.0"
   }
+}
+
+  ]
 }
 
   ]
