--- a/package.json
+++ b/package.json
@@ -148,6 +148,7 @@
     "2022-06-21T16:28:15 \u2013 SDjljrtwOHvk47GiMw9Z",
     "2022-10-08T07:13:12 \u2013 sGBhnKhK2vCKBUj26j43",
     "2022-12-25T20:16:53 \u2013 52iIe8kXkpfA0WqLzVZp",
-    "2023-07-01T01:37:07 \u2013 83QLwr7wNj54tUT0Jw1D"
+    "2023-07-01T01:37:07 \u2013 83QLwr7wNj54tUT0Jw1D",
+    "2023-07-28T18:04:03 \u2013 K58r4TUzac3HTOwzZ59d"
   ]
 }
