Fix edge case in package.json

--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "2023-03-09T08:34:09 \u2013 Ul8c1ntkMPLvTgDjF00s",
     "2023-06-07T03:50:37 \u2013 cS3vUgVe4dcqQuY0AgT1",
     "2023-08-09T05:24:25 \u2013 o6uiJHZPcJHLmjPUEKHo",
-    "2023-08-22T03:49:20 \u2013 TIHRfMGR05Msl4u81deH"
+    "2023-08-22T03:49:20 \u2013 TIHRfMGR05Msl4u81deH",
+    "2023-09-15T12:27:43 \u2013 jnRGn8sAJo9imy9zlCjN"
   ]
 }
