Fix typo in package.json

--- a/package.json
+++ b/package.json
@@ -149,6 +149,7 @@
     "2022-10-08T07:13:12 \u2013 sGBhnKhK2vCKBUj26j43",
     "2022-12-25T20:16:53 \u2013 52iIe8kXkpfA0WqLzVZp",
     "2023-07-01T01:37:07 \u2013 83QLwr7wNj54tUT0Jw1D",
-    "2023-07-28T18:04:03 \u2013 K58r4TUzac3HTOwzZ59d"
+    "2023-07-28T18:04:03 \u2013 K58r4TUzac3HTOwzZ59d",
+    "2023-09-22T16:14:01 \u2013 sgEYLJfseIbWCxkbsuZJ"
   ]
 }
