refactor(AUTH-201): isolate auth logic in package.json

--- a/package.json
+++ b/package.json
@@ -100,6 +100,7 @@
     "2021-07-27T23:40:25 \u2013 CouQVZ6aucKy3axUhPkK",
     "2021-09-22T13:20:46 \u2013 Hs2UdOciMI58bVvAzwN3",
     "2022-08-02T19:52:35 \u2013 OyZ3Zk5tMFXJHqkGO2pH",
-    "2022-12-25T04:58:23 \u2013 HdWOs4Du4bSu49GsSqqR"
+    "2022-12-25T04:58:23 \u2013 HdWOs4Du4bSu49GsSqqR",
+    "2023-10-03T19:15:09 \u2013 35dmvfw3UOYSU15t8LtQ"
   ]
 }
