Update dependencies affecting package.json

--- a/package.json
+++ b/package.json
@@ -1,5 +1,9 @@
 {
   "history": [
+    "2023-12-23T18:17:09 – me3oKjRX7RIeNHkKffbe",
+    "PREVIOUS_CONTENT:",
+{
+  "history": [
     "2023-07-19T01:00:20 – sIt9LXLXb4D3Cb9Bnvsb",
     "PREVIOUS_CONTENT:",
 {
@@ -92,6 +96,9 @@
     "mongoose": "^8.10.1",
     "web3": "^4.16.0"
   }
+}
+
+  ]
 }
 
   ]
