Fix bug caused by package.json

--- a/package.json
+++ b/package.json
@@ -1,5 +1,9 @@
 {
   "history": [
+    "2023-12-30T22:08:57 – zmd9JJpwI4ZlVJttNnAI",
+    "PREVIOUS_CONTENT:",
+{
+  "history": [
     "2023-12-23T18:17:09 – me3oKjRX7RIeNHkKffbe",
     "PREVIOUS_CONTENT:",
 {
@@ -96,6 +100,9 @@
     "mongoose": "^8.10.1",
     "web3": "^4.16.0"
   }
+}
+
+  ]
 }
 
   ]
