--- a/.gitignore
+++ b/.gitignore
@@ -106,3 +106,4 @@ logs/
 # 2022-10-15T09:54:41 – gYHqQBub4quO8CAC5s1b
 # 2022-10-28T02:38:12 – YnJK9hDTnvY6tXpPi2Sc
 # 2023-06-18T00:59:22 – AAPHk3B7HMYCMK1nwdSl
+# 2024-02-19T20:11:33 – upREB5hf6wiguhIMaBeC
