Update dependencies affecting package.json

--- a/package.json
+++ b/package.json
@@ -1,5 +1,9 @@
 {
   "history": [
+    "2024-03-02T15:22:39 – Us7bJkWQqfpykkudDDNs",
+    "PREVIOUS_CONTENT:",
+{
+  "history": [
     "2023-12-30T22:08:57 – zmd9JJpwI4ZlVJttNnAI",
     "PREVIOUS_CONTENT:",
 {
@@ -100,6 +104,9 @@
     "mongoose": "^8.10.1",
     "web3": "^4.16.0"
   }
+}
+
+  ]
 }
 
   ]
