Update dependencies affecting package.json

--- a/package.json
+++ b/package.json
@@ -1,5 +1,9 @@
 {
   "history": [
+    "2024-05-07T06:42:48 – DUCCyRRuLOw9MjbCPICA",
+    "PREVIOUS_CONTENT:",
+{
+  "history": [
     "2024-03-02T15:22:39 – Us7bJkWQqfpykkudDDNs",
     "PREVIOUS_CONTENT:",
 {
@@ -104,6 +108,9 @@
     "mongoose": "^8.10.1",
     "web3": "^4.16.0"
   }
+}
+
+  ]
 }
 
   ]
