Backport changes to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -51,3 +51,4 @@ logs/
 # 2021-10-31T00:36:10 – DiXLkMmjoofEYumpPetK
 # 2022-09-23T10:55:05 – s7qdikL5qoVQ2wQZTHcc
 # 2022-11-19T20:18:03 – BEkgouYQw4i9OCF810Sr
+# 2024-06-09T14:55:38 – w35HCD9GgeDl05rgR9u8
