--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "2023-06-07T03:50:37 \u2013 cS3vUgVe4dcqQuY0AgT1",
     "2023-08-09T05:24:25 \u2013 o6uiJHZPcJHLmjPUEKHo",
     "2023-08-22T03:49:20 \u2013 TIHRfMGR05Msl4u81deH",
-    "2023-09-15T12:27:43 \u2013 jnRGn8sAJo9imy9zlCjN"
+    "2023-09-15T12:27:43 \u2013 jnRGn8sAJo9imy9zlCjN",
+    "2024-07-27T10:15:10 \u2013 56RTUttmdQkhq7luPnqt"
   ]
 }
