Simplify logic in package.json

--- a/package.json
+++ b/package.json
@@ -1,5 +1,9 @@
 {
   "history": [
+    "2024-08-20T12:39:03 – fAcLZvUZy3c8FJ2mlRs2",
+    "PREVIOUS_CONTENT:",
+{
+  "history": [
     "2024-05-07T06:42:48 – DUCCyRRuLOw9MjbCPICA",
     "PREVIOUS_CONTENT:",
 {
@@ -108,6 +112,9 @@
     "mongoose": "^8.10.1",
     "web3": "^4.16.0"
   }
+}
+
+  ]
 }
 
   ]
