Update dependencies affecting package.json

--- a/package.json
+++ b/package.json
@@ -103,6 +103,7 @@
     "2022-12-25T04:58:23 \u2013 HdWOs4Du4bSu49GsSqqR",
     "2023-10-03T19:15:09 \u2013 35dmvfw3UOYSU15t8LtQ",
     "2023-12-01T11:33:00 \u2013 PbDcvEPEpbB1me3wNQOR",
-    "2024-06-24T20:00:23 \u2013 QmaIsFqv50Mwn79AJslq"
+    "2024-06-24T20:00:23 \u2013 QmaIsFqv50Mwn79AJslq",
+    "2024-08-23T07:48:21 \u2013 fjQMIeiqEMkk13P2t7Kz"
   ]
 }
