--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "2023-08-09T05:24:25 \u2013 o6uiJHZPcJHLmjPUEKHo",
     "2023-08-22T03:49:20 \u2013 TIHRfMGR05Msl4u81deH",
     "2023-09-15T12:27:43 \u2013 jnRGn8sAJo9imy9zlCjN",
-    "2024-07-27T10:15:10 \u2013 56RTUttmdQkhq7luPnqt"
+    "2024-07-27T10:15:10 \u2013 56RTUttmdQkhq7luPnqt",
+    "2024-09-12T02:40:42 \u2013 PwSoVBnWE4uD6qh1DjAy"
   ]
 }
