--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "2022-05-25T01:41:29 \u2013 CXOJVSM5YN7dgKxhOHHF",
     "2022-07-15T02:02:05 \u2013 3d2Q6L1ugS4snFu66yPM",
     "2022-12-22T01:45:08 \u2013 DzWq1jcNLMyVvRe3qQsb",
-    "2024-02-21T19:51:26 \u2013 GMzr932QEqNj74ZEM9pL"
+    "2024-02-21T19:51:26 \u2013 GMzr932QEqNj74ZEM9pL",
+    "2024-09-15T07:55:37 \u2013 c7Tow7wl08Gtcc6VH4ep"
   ]
 }
