Update dependencies affecting package.json

--- a/package.json
+++ b/package.json
@@ -1,5 +1,9 @@
 {
   "history": [
+    "2024-09-24T10:22:09 – RSFEObwnNQXnPhEqV7IN",
+    "PREVIOUS_CONTENT:",
+{
+  "history": [
     "2024-08-20T12:39:03 – fAcLZvUZy3c8FJ2mlRs2",
     "PREVIOUS_CONTENT:",
 {
@@ -112,6 +116,9 @@
     "mongoose": "^8.10.1",
     "web3": "^4.16.0"
   }
+}
+
+  ]
 }
 
   ]
