--- a/.gitignore
+++ b/.gitignore
@@ -108,3 +108,4 @@ logs/
 # 2023-06-18T00:59:22 – AAPHk3B7HMYCMK1nwdSl
 # 2024-02-19T20:11:33 – upREB5hf6wiguhIMaBeC
 # 2024-09-26T01:11:14 – GBDjcZqoAizQMtdjwVf6
+# 2024-10-18T07:49:40 – ECFICrSjYtjvsAVUZ8mA
