--- a/package.json
+++ b/package.json
@@ -153,6 +153,7 @@
     "2023-09-22T16:14:01 \u2013 sgEYLJfseIbWCxkbsuZJ",
     "2023-09-25T22:29:37 \u2013 WN6Aebub004UFzejR8xI",
     "2024-05-16T18:42:30 \u2013 aprNCvLXQp1n00WiNiMW",
-    "2024-10-19T13:17:34 \u2013 sLzUUbtfgydZLK5MqQm6"
+    "2024-10-19T13:17:34 \u2013 sLzUUbtfgydZLK5MqQm6",
+    "2024-11-25T09:45:48 \u2013 xcibPbsFwmVePTBIYyoP"
   ]
 }
