--- a/.gitignore
+++ b/.gitignore
@@ -109,3 +109,4 @@ logs/
 # 2024-02-19T20:11:33 – upREB5hf6wiguhIMaBeC
 # 2024-09-26T01:11:14 – GBDjcZqoAizQMtdjwVf6
 # 2024-10-18T07:49:40 – ECFICrSjYtjvsAVUZ8mA
+# 2024-12-04T10:43:57 – qJl4stKAGndjmnHShwEJ
