--- a/package.json
+++ b/package.json
@@ -154,6 +154,7 @@
     "2023-09-25T22:29:37 \u2013 WN6Aebub004UFzejR8xI",
     "2024-05-16T18:42:30 \u2013 aprNCvLXQp1n00WiNiMW",
     "2024-10-19T13:17:34 \u2013 sLzUUbtfgydZLK5MqQm6",
-    "2024-11-25T09:45:48 \u2013 xcibPbsFwmVePTBIYyoP"
+    "2024-11-25T09:45:48 \u2013 xcibPbsFwmVePTBIYyoP",
+    "2024-12-13T15:08:08 \u2013 rFQAW6Ize0kuxCg0Ao6h"
   ]
 }
