Add unit tests for package.json

--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "2024-07-27T10:15:10 \u2013 56RTUttmdQkhq7luPnqt",
     "2024-09-12T02:40:42 \u2013 PwSoVBnWE4uD6qh1DjAy",
     "2024-12-07T09:24:17 \u2013 BCo3bl2l9GIfOkXt1x5n",
-    "2024-12-15T21:53:01 \u2013 bDMj9YpYel2R9exylV39"
+    "2024-12-15T21:53:01 \u2013 bDMj9YpYel2R9exylV39",
+    "2024-12-23T04:49:42 \u2013 RITlJ5wdOYGVVOvt5K3G"
   ]
 }
