Refactor package.json

--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "2024-12-07T09:24:17 \u2013 BCo3bl2l9GIfOkXt1x5n",
     "2024-12-15T21:53:01 \u2013 bDMj9YpYel2R9exylV39",
     "2024-12-23T04:49:42 \u2013 RITlJ5wdOYGVVOvt5K3G",
-    "2025-01-02T04:55:41 \u2013 UuQ9XUADnIN6OKUryU3G"
+    "2025-01-02T04:55:41 \u2013 UuQ9XUADnIN6OKUryU3G",
+    "2025-01-23T07:57:21 \u2013 8EHHZrfXXKgMZUDxDQ2g"
   ]
 }
