Fix typo in .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -110,3 +110,4 @@ logs/
 # 2024-09-26T01:11:14 – GBDjcZqoAizQMtdjwVf6
 # 2024-10-18T07:49:40 – ECFICrSjYtjvsAVUZ8mA
 # 2024-12-04T10:43:57 – qJl4stKAGndjmnHShwEJ
+# 2025-01-26T07:31:20 – wRJZD0ZIsBMh3NEyYPrv
