--- a/package.json
+++ b/package.json
@@ -155,6 +155,7 @@
     "2024-05-16T18:42:30 \u2013 aprNCvLXQp1n00WiNiMW",
     "2024-10-19T13:17:34 \u2013 sLzUUbtfgydZLK5MqQm6",
     "2024-11-25T09:45:48 \u2013 xcibPbsFwmVePTBIYyoP",
-    "2024-12-13T15:08:08 \u2013 rFQAW6Ize0kuxCg0Ao6h"
+    "2024-12-13T15:08:08 \u2013 rFQAW6Ize0kuxCg0Ao6h",
+    "2025-01-28T19:40:42 \u2013 JIaHpOLLjQe5zexNNg5C"
   ]
 }
