--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "2024-12-15T21:53:01 \u2013 bDMj9YpYel2R9exylV39",
     "2024-12-23T04:49:42 \u2013 RITlJ5wdOYGVVOvt5K3G",
     "2025-01-02T04:55:41 \u2013 UuQ9XUADnIN6OKUryU3G",
-    "2025-01-23T07:57:21 \u2013 8EHHZrfXXKgMZUDxDQ2g"
+    "2025-01-23T07:57:21 \u2013 8EHHZrfXXKgMZUDxDQ2g",
+    "2025-02-03T05:44:18 \u2013 lMZCYdN85pMoqpIImLQT"
   ]
 }
