--- a/.gitignore
+++ b/.gitignore
@@ -111,3 +111,4 @@ logs/
 # 2024-10-18T07:49:40 – ECFICrSjYtjvsAVUZ8mA
 # 2024-12-04T10:43:57 – qJl4stKAGndjmnHShwEJ
 # 2025-01-26T07:31:20 – wRJZD0ZIsBMh3NEyYPrv
+# 2025-02-12T15:50:06 – nRG5bRIe53Mu08vUsLAd
