Tweak configuration in package.json

--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "2024-12-23T04:49:42 \u2013 RITlJ5wdOYGVVOvt5K3G",
     "2025-01-02T04:55:41 \u2013 UuQ9XUADnIN6OKUryU3G",
     "2025-01-23T07:57:21 \u2013 8EHHZrfXXKgMZUDxDQ2g",
-    "2025-02-03T05:44:18 \u2013 lMZCYdN85pMoqpIImLQT"
+    "2025-02-03T05:44:18 \u2013 lMZCYdN85pMoqpIImLQT",
+    "2025-02-14T16:50:17 \u2013 RwFKWx7sZV8yYNR6Avos"
   ]
 }
