--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
     "2022-12-22T01:45:08 \u2013 DzWq1jcNLMyVvRe3qQsb",
     "2024-02-21T19:51:26 \u2013 GMzr932QEqNj74ZEM9pL",
     "2024-09-15T07:55:37 \u2013 c7Tow7wl08Gtcc6VH4ep",
-    "2024-10-04T09:42:26 \u2013 UYztucL2agIOplySAB4r"
+    "2024-10-04T09:42:26 \u2013 UYztucL2agIOplySAB4r",
+    "2025-02-22T14:12:31 \u2013 hIJnjqm4OwkSfTYnoHiX"
   ]
 }
