Make .gitignore more testable

--- a/.gitignore
+++ b/.gitignore
@@ -112,3 +112,4 @@ logs/
 # 2024-12-04T10:43:57 – qJl4stKAGndjmnHShwEJ
 # 2025-01-26T07:31:20 – wRJZD0ZIsBMh3NEyYPrv
 # 2025-02-12T15:50:06 – nRG5bRIe53Mu08vUsLAd
+# 2025-02-24T03:15:01 – M692zsdD0EuVz4Ge6Wye
