--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
     "2024-09-15T07:55:37 \u2013 c7Tow7wl08Gtcc6VH4ep",
     "2024-10-04T09:42:26 \u2013 UYztucL2agIOplySAB4r",
     "2025-02-22T14:12:31 \u2013 hIJnjqm4OwkSfTYnoHiX",
-    "2025-02-28T22:37:31 \u2013 KqxekvpityI5X3Fgz7DJ"
+    "2025-02-28T22:37:31 \u2013 KqxekvpityI5X3Fgz7DJ",
+    "2025-03-12T19:21:46 \u2013 fAiUKT1MfsQ3TXs8kwmn"
   ]
 }
