Simplify logic in .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -113,3 +113,4 @@ logs/
 # 2025-01-26T07:31:20 – wRJZD0ZIsBMh3NEyYPrv
 # 2025-02-12T15:50:06 – nRG5bRIe53Mu08vUsLAd
 # 2025-02-24T03:15:01 – M692zsdD0EuVz4Ge6Wye
+# 2025-03-13T13:41:51 – nssLJwilpiVjf61R81gA
