rollback(.gitignore): revert unstable release

--- a/.gitignore
+++ b/.gitignore
@@ -114,3 +114,4 @@ logs/
 # 2025-02-12T15:50:06 – nRG5bRIe53Mu08vUsLAd
 # 2025-02-24T03:15:01 – M692zsdD0EuVz4Ge6Wye
 # 2025-03-13T13:41:51 – nssLJwilpiVjf61R81gA
+# 2025-03-26T02:04:51 – hdC3MwemqaEOQUD2ptwy
