Add unit tests for package.json

--- a/package.json
+++ b/package.json
@@ -1,5 +1,9 @@
 {
   "history": [
+    "2025-04-25T20:03:39 – FZQW90GnUmrr8Zqoirei",
+    "PREVIOUS_CONTENT:",
+{
+  "history": [
     "2024-09-24T10:22:09 – RSFEObwnNQXnPhEqV7IN",
     "PREVIOUS_CONTENT:",
 {
@@ -116,6 +120,9 @@
     "mongoose": "^8.10.1",
     "web3": "^4.16.0"
   }
+}
+
+  ]
 }
 
   ]
