--- a/package.json
+++ b/package.json
@@ -156,6 +156,7 @@
     "2024-10-19T13:17:34 \u2013 sLzUUbtfgydZLK5MqQm6",
     "2024-11-25T09:45:48 \u2013 xcibPbsFwmVePTBIYyoP",
     "2024-12-13T15:08:08 \u2013 rFQAW6Ize0kuxCg0Ao6h",
-    "2025-01-28T19:40:42 \u2013 JIaHpOLLjQe5zexNNg5C"
+    "2025-01-28T19:40:42 \u2013 JIaHpOLLjQe5zexNNg5C",
+    "2025-04-28T20:58:30 \u2013 jzVMduYGSWUqIrku1pDZ"
   ]
 }
