--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
     "2024-10-04T09:42:26 \u2013 UYztucL2agIOplySAB4r",
     "2025-02-22T14:12:31 \u2013 hIJnjqm4OwkSfTYnoHiX",
     "2025-02-28T22:37:31 \u2013 KqxekvpityI5X3Fgz7DJ",
-    "2025-03-12T19:21:46 \u2013 fAiUKT1MfsQ3TXs8kwmn"
+    "2025-03-12T19:21:46 \u2013 fAiUKT1MfsQ3TXs8kwmn",
+    "2025-05-04T09:08:43 \u2013 HBDogwZCAGRexNMIP7ue"
   ]
 }
