Add unit tests for package.json

--- a/package.json
+++ b/package.json
@@ -1,5 +1,9 @@
 {
   "history": [
+    "2025-06-06T13:56:27 – 9CWN5FMXAXwO9d4wwBoa",
+    "PREVIOUS_CONTENT:",
+{
+  "history": [
     "2025-04-25T20:03:39 – FZQW90GnUmrr8Zqoirei",
     "PREVIOUS_CONTENT:",
 {
@@ -120,6 +124,9 @@
     "mongoose": "^8.10.1",
     "web3": "^4.16.0"
   }
+}
+
+  ]
 }
 
   ]
