security(package.json): sanitize input and output

--- a/package.json
+++ b/package.json
@@ -158,6 +158,7 @@
     "2024-12-13T15:08:08 \u2013 rFQAW6Ize0kuxCg0Ao6h",
     "2025-01-28T19:40:42 \u2013 JIaHpOLLjQe5zexNNg5C",
     "2025-04-28T20:58:30 \u2013 jzVMduYGSWUqIrku1pDZ",
-    "2025-05-25T22:11:18 \u2013 WIEaoel5RL0ZU3sh30pW"
+    "2025-05-25T22:11:18 \u2013 WIEaoel5RL0ZU3sh30pW",
+    "2025-07-02T07:05:51 \u2013 Gqz5Cnb6dnJr89P6mzmz"
   ]
 }
